# GAWFramework

./: .gitignore  CMakeLists.txt  CMakePresets.json  package-lock.json  package.json  rescompile.py  tsconfig.json
data/sources/models/logo/: quick_logo.blend
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/raylib/: CMakeLists.txt  rlgl.h
lib/vectorial/: CMakeLists.txt
src/cmake/: ProjectDesktopConfig.cmake  ProjectEmscriptenConfig.cmake
src/game/: CMakeLists.txt  game_init.c  gaw_config.h.in  gaw_framework.h  gaw_internal.h
src/game/filesystem/: file_container.c  file_container.h  resource_image.c  resource_image.h  stream.c  stream.h  stream_rwops.c  stream_rwops.h
src/game/gamestate/: game_state_machine.c  game_state_machine.h
src/game/graphics/: graphics.c  graphics.h  rlgl.c
src/game/include/: gaw_config.h
src/game/math/: raymath.c
src/game/mathlib/: vector.h
src/game/menu/: menu_state.c  menu_state.h
src/rescompiler/: CMakeLists.txt  main.cpp
src/runtime_desktop/: CMakeLists.txt  app.manifest  app.rc.in  main.cpp
src/runtime_web/: CMakeLists.txt  index.html  main.c
src/web_shell/: shell.ts
